<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Haberler</string>
    <string name="announcements">Duyurular</string>

    <string name="set">Ayarla</string>
    <string name="confirm">Onayla</string>
    <string name="cancel">İptal</string>
    <string name="close">Kapat</string>
    <string name="save">Kaydet</string>
    <string name="send">Gönder</string>
    <string name="yes">EVET</string>
    <string name="no">HAYIR</string>
    <string name="update">Guncelle</string>
    <string name="delete">Sil</string>
    <string name="isDelete">silinsin mi?</string>


    //SignIn
    <string name="signIn">Giriş Yap</string>
    <string name="signInBigLetter">GİRİŞ YAP</string>
    <string name="putPaswordSignIn">Şifrenizi giriniz</string>
    <string name="forgetPassword">Şifremi Unuttum</string>
    <string name="dontHaveAccount">Hesabın yok mu? Kayıt Ol</string>
    <string name="welcome">Hoşgeldin: </string>
    <string name="signInFailed">Giriş başarısız! - Email veya şifre yanlış. Tekrar deneyiniz.</string>
    //SignUp
    <string name="signUp">Kayıt Ol</string>
    <string name="signUpBigLetter">KAYIT OL</string>
    <string name="putNameSurname">İsim ve Soyisim giriniz</string>
    <string name="birthDateSignUp">Doğum tarihinizi giriniz(GG/AA/YYYY) </string>
    <string name="alreadyHaveAccount">Zaten bir hesabınız var mı? Giriş Yap</string>
    <string name="putEmail">Email adresinizi giriniz</string>
    <string name="putUserName">Kullanıcı adınızı giriniz</string>
    <string name="putPasword">Şifrenizi giriniz (en az 6 karakter)</string>
    <string name="putPasswordAgain">Şifrenizi tekrar giriniz</string>
    <string name="requiredUserName">İsim alanı boş geçilemez!</string>
    <string name="requiredBirtDate">Doğum tarihi alanı boş geçilemez!</string>
    <string name="requiredPassword">Şifre alanı boş geçilemez!</string>
    <string name="passwordLength">Şifre en az 6 karakterden oluşmalıdır!</string>
    <string name="requiredPasswordAgain">Şifre tekrar alanı boş geçilemez!</string>
    <string name="registrationSuccess">Kayıt Başarılı!</string>
    <string name="registrationFailed">Kayıt Başarısız!</string>
    <string name="passwordCheck">Uyarı: Girilen şifreler eşleşmiyor!</string>
    //SignOut
    <string name="signingOut">Çıkış yapılıyor...</string>
    <string name="signedOut">hesabından çıkış yapıldı.</string>
    //ForgetPassword
    <string name="email">Email</string>
    <string name="requiredEmail">Email alanı boş geçilemez!</string>
    <string name="checkEmailFormat">Geçerli bir email adresi giriniz!</string>
    <string name="checkYourEmail">Yeni Şifre oluşturmak için email kutunu kontrol et</string>
    <string name="infoForgetPasword">Girdiğiniz email adresine gelecek olan mail ile şifrenizi değiştirebilirsiniz.</string>
    <string name="forgetPasswordMessage">Şifrenizi mi unuttunuz? Endişelenmeyin! Lütfen hesabınızla ilişkili e-posta adresini girin. </string>

    <!--Haberler-->
    <string name="today">Bugün</string>
    <string name="search">Ara..</string>

    <!--Haberler Admin-->
    <string name="addNewNews">Yeni Haber Ekle</string>

    <!--Yeni Haber Admin-->
    <string name="newNewsTitle">Başlık</string>
    <string name="newNewsContent">Haber İçeriği</string>
    <string name="newNewsChooseImage">Fotoğraf Ekle</string>
    <string name="newNewsTitleTitleRequired">Başlık alanı boş bırakılamaz</string>
    <string name="newNewsContentRequired">Haber içeriği boş bırakılamaz</string>
    <string name="newNewsSavedMessage">Haber başarıyla kaydedildi.</string>

    <!--Haber Guncelle Admin-->
    <string name="updateNewsMessage">Haber başarıyla güncellendi.</string>


    <!--Duyurular-->

    <!--Duyurular Admin-->
    <string name="addNewAnnouncement">Yeni Duyuru Ekle</string>

    <!--Yeni Duyuru Admin-->
    <string name="newAnnouncementTitle">Başlık</string>
    <string name="newAnnouncementContent">Duyuru İçeriği</string>
    <string name="newAnnouncementTitleTitleRequired">Başlık alanı boş bırakılamaz</string>
    <string name="newAnnouncementContentRequired">Duyuru içeriği boş bırakılamaz</string>
    <string name="newAnnouncementSavedMessage">Duyuru başarıyla kaydedildi.</string>

    <!--Duyuru Guncelle Admin-->
    <string name="updateAnnouncementMessage">Duyuru başarıyla güncellendi.</string>

    <!--Settings-->
    <string name="settings">Ayarlar</string>
    <string name="signOut">Çıkış yap</string>
    <string name="signOutMessage">Çıkış Yapıldı.</string>
    <string name="deleteAccount">Hesabı Sil</string>
    <string name="deleteAccountMessage">Hesabınız silindi!</string>
    <string name="accountWillDelete">Dikkat: Hesabınız Silinecek!</string>
    <string name="deleteAccountWarning">Hesabınızı silmek istediğinizden emin misiniz?</string>

</resources>