<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AdminYeniHaberFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivNewNewsImageAdmin"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/image_not_found"
                app:layout_constraintEnd_toStartOf="@+id/btnNewNewsAddImageAdmin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNewNewsTitleAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivNewNewsImageAdmin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewNewsTitleAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newNewsTitle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNewNewsContentAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputNewNewsTitleAdmin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewNewsContentAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/newNewsContent"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnNewNewsSaveAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputNewNewsContentAdmin" />

            <Button
                android:id="@+id/btnNewNewsAddImageAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#888888"
                android:text="@string/newNewsChooseImage"
                app:layout_constraintBottom_toBottomOf="@+id/ivNewNewsImageAdmin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivNewNewsImageAdmin"
                app:layout_constraintTop_toTopOf="@+id/ivNewNewsImageAdmin" />


            <ProgressBar
                android:id="@+id/progressBarNewNewsAdmin"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/btnNewNewsSaveAdmin"
                app:layout_constraintTop_toTopOf="@+id/btnNewNewsSaveAdmin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>